--- a/Lambia.cabal
+++ b/Lambia.cabal
@@ -21,6 +21,9 @@ executable Lambia
   -- other-extensions:    
   build-depends:       base >=4.6 && <4.7,
                        bytestring,
-                       attoparsec
+                       attoparsec,
+                       containers,
+                       transformers,
+                       mtl-c
   hs-source-dirs:      src
   default-language:    Haskell2010
