--- a/Lambia.cabal
+++ b/Lambia.cabal
@@ -24,6 +24,8 @@ executable Lambia
                        parsec,
                        containers,
                        transformers,
-                       mtl-c
+                       mtl-c,
+                       haskeline
   hs-source-dirs:      src
   default-language:    Haskell2010
+  ghc-options:         -O2 -fwarn-unused-imports
