--- a/Lambia.cabal
+++ b/Lambia.cabal
@@ -24,8 +24,9 @@ executable Lambia
                        parsec,
                        containers,
                        transformers,
-                       mtl-c,
-                       haskeline
+                       haskeline,
+                       mtl,
+                       split
   hs-source-dirs:      src
   default-language:    Haskell2010
   ghc-options:         -O2 -fwarn-unused-imports
